minor changes to bearer token logic